=== fitdistrplus : Help to fit of a parametric distribution ===

Version 1.0-10
=============
NEW FEATURES
- update the FAQ with beta(a,a).
- improve graphics for discrete distributions in denscomp().
- improve automatic naming of legends in xxxcomp().
- harmonize outputs in mledist, qmedist, mmedist, mgedist, fitdist and fitdistcens.
- automatic test of d, p, q functions in fitdist() and raise warnings.
- improve test for starting and fixed values.
- add new default starting values for distributions in actuar.
- change of the default CDF plot for censored data, using the Wang NPMLE algorithm provided in the package npsurv (in plotdistcens and cdfcompcens)
- add of two new goodness-of-fit plots (QQ-plot and PP-plot) for censored data (cf. plotdistcens, qqcompcens and ppcompcens). 
- homogeneization of xlim and ylim default definition in plotdistcens.
- Removing of the name of the first argument in calls to dpq functions in order
to make the package compatible with distributions defined with a non classical
name for their first argument (resp. x, q, p for d, p, q functions).

BUG FIXES
- bug fixed concerning the use of gofstat with a chi squared df <=0 (error message blocking the other functions)
- bug fix in mledist() when bounds were set (so not NULL) for censored MLE

Version 1.0-9
=============
- update the FAQ with linear inequality constraints.

Version 1.0-8
=============
NEW FEATURES
- support the use of ggplot2 for cdfcomp, denscomp, qqcomp, ppcomp.

BUG FIXES
- correct legend for qqcomp and ppomp on large data.
- correct weights in mmedist.
- correct the name Akaike in gofstat.
- correct the use of trueval in plot.bootdist.
- correct the vignette on truncate (inflated) distributions.

Version 1.0-7
=============

NEW FEATURES
- keep the JSS vignette as a pdf.
- start the FAQ vignette and add datasets (?dataFAQ) for it.
- provide likelihood plot/surface/curve: llplot, llcurve, llsurface.
- provide parallelization of bootstrap in bootdist and bootdistcens.